# PROSE-PARSED-PERIL

./: .gitignore  README.md  judge_results.xlsx  main.py  pyproject.toml
src/: OCR.py  judge.py
